# city-data-platform

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_schema_additions.py  003_traffic_readings.py  004_demographics.py  005_semantic_id.py
backend/app/: config.py  db.py  dependencies.py  main.py  scheduler.py
backend/app/connectors/: __init__.py  air_quality_grid.py  autobahn.py  base.py  bast.py  bundesagentur.py  bus_interpolation.py  cycling.py  ev_charging.py  gtfs.py  gtfs_rt.py  heat_demand.py  ladesaeulen.py  lhp.py  lubw_wfs.py  mastr.py  mobidata_bw.py  osm_buildings.py  overpass_community.py  overpass_roadworks.py  parking.py  pegelonline.py  police.py  sensor_community.py  smard.py  solar_potential.py  solar_production.py  statistik_bw.py  stub.py  tomtom.py  uba.py  weather.py  wegweiser_kommune.py  zensus.py
backend/app/models/: air_quality_grid.py  bus_interpolation.py  lhp.py  lubw_wfs.py  parking.py  pegelonline.py  sensor_community.py  solar_production.py  uba.py  weather.py
backend/app/routers/: __init__.py  admin.py  connectors.py  features.py  kpi.py  layers.py  metadata.py  (+1 more)
backend/scripts/: cleanup_stale_transit.sql  load_vg250.py
backend/tests/: conftest.py  test_api_admin.py  test_api_connectors.py  test_api_kpi.py  test_api_layers.py  test_api_timeseries.py  test_boundaries.py  test_config.py  test_config_env.py  test_connector.py  test_migrations.py  test_multi_town.py  test_semantic_id.py
(+346 files in other folders)
